--- a/styles/style.css
+++ b/styles/style.css
@@ -17,7 +17,7 @@ html {
   margin: auto;
   color: #fff;
   font-size: 18px;
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: "Fira Sans Condensed", "Roboto", "Arial", sans-serif;
   background-color: #1b1919;
 }
 
