--- a/styles/content_card_link_states.css
+++ b/styles/content_card_link_states.css
@@ -3,6 +3,10 @@
   text-underline-offset: 6px;
 }
 
+.content__card-link:active {
+  background-color: #545050;
+}
+
 .content__card-link:focus {
   outline: none;
 }
