--- a/styles/style.css
+++ b/styles/style.css
@@ -57,3 +57,276 @@ ol {
   clip: rect(0 0 0 0);
   overflow: hidden;
 }
+
+/* левый блок */
+
+.result {
+  max-width: 711px;
+}
+
+.result__video-container {
+  position: relative;
+  max-width: 711px;
+  height: 386px;
+  margin-bottom: 20px;
+  /* bottom: 20px; */
+  cursor: pointer;
+}
+.result__video {
+  width: 100%;
+  height: 100%;
+  object-fit: fill;
+  object-position: center;
+}
+
+.search-form {
+  margin-bottom: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  gap: 40px;
+}
+
+.search-form__fieldset {
+  border: none;
+}
+
+.search-form__fieldset-title {
+  margin-bottom: 5px;
+  font-size: 18px;
+  font-weight: 400;
+}
+
+.search-form__label {
+  width: fit-content;
+  cursor: pointer;
+}
+
+.search-form__checkbox-list {
+  display: flex;
+}
+
+.search-form__label {
+  cursor: pointer;
+}
+
+.search-form__pseudo-checkbox {
+  display: inline-block;
+  vertical-align: middle;
+  text-align: center;
+  line-height: 15px;
+  width: 19px;
+  height: 19px;
+  border: 1px solid white;
+  cursor: pointer;
+}
+
+.search-form__textfield {
+  width: 225px;
+  appearance: none;
+  border: none;
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
+  background-color: transparent;
+  font-size: 18px;
+  color: rgba(255, 255, 255, 0.7);
+  cursor: pointer;
+}
+
+.button {
+  appearance: none;
+  padding: 6px 0;
+  border: 1px solid #fff;
+  color: #fff;
+  text-align: center;
+  background: transparent;
+  font-size: 18px;
+  font-weight: 700;
+  font-family: inherit;
+  cursor: pointer;
+}
+
+.search-form__submit-button {
+  margin-top: 20px;
+  width: 194px;
+  height: 34px;
+}
+
+/* правый блок */
+
+.content__details {
+  width: 394px;
+}
+
+.title {
+  margin-bottom: 28px;
+  font-family: "Oswald", "Roboto", "Arial", sans-serif;
+  font-size: 75px;
+  font-weight: 700;
+  line-height: 94%;
+  text-transform: uppercase;
+}
+
+.content__accent {
+  color: #545050;
+}
+
+.content__list {
+  position: relative;
+  bottom: 10px;
+  width: 394px;
+  height: 298px;
+  overflow: hidden auto;
+}
+
+.content__list-item {
+  width: 100%;
+}
+
+.content__video-card {
+  display: flex;
+  max-width: 394px;
+}
+
+.content__video-card-description-container {
+  width: 50%;
+}
+
+.content__video-card-title {
+  width: 100%;
+  margin-left: 3px;
+  text-transform: uppercase;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  overflow: hidden;
+  color: #fff;
+  font-family: "Oswald", "Roboto", "Arial", sans-serif;
+  font-size: 30px;
+  font-weight: 700;
+}
+
+.content__video-card-description {
+  margin-left: 3px;
+  color: #fff;
+  font-family: "Fira Sans Condensed", "Roboto", "Arial", sans-serif;
+  font-size: 18px;
+  line-height: 16.2px;
+}
+
+.content__video-card-thumbnail {
+  width: 50%;
+  object-fit: contain;
+  object-position: center;
+}
+
+.content__card-link {
+  display: block;
+  text-decoration: none;
+}
+
+.more-button {
+  margin: 0 5px 5px 5px;
+  min-height: 34px;
+  width: 97%;
+}
+
+/* search form */
+
+.search-form__label:not(:last-child) {
+  margin-right: 15px;
+}
+
+.search-form__label:has(:focus-visible) {
+  outline: 1px solid #fff;
+  outline-offset: 1px;
+}
+
+.search-form__textfield::placeholder {
+  color: rgba(255, 255, 255, 0.7);
+  font-family: "Fira Sans Condensed", "Roboto", "Arial", sans-serif;
+}
+
+.search-form__textfield:hover {
+  cursor: text;
+}
+
+.search-form__textfield:active {
+  border: none;
+  outline: 0.5px solid white;
+}
+
+.search-form__textfield:focus {
+  outline: none;
+}
+
+.search-form__textfield:focus-visible {
+  border: none;
+  outline: 0.5px solid white;
+}
+
+.search-form__textfield:not(:placeholder-shown) {
+  background-color: transparent;
+}
+
+.search-form__label-text:hover {
+  text-decoration: underline 1px white;
+  text-underline-offset: 4px;
+}
+
+input[type="checkbox"]:checked + span::after {
+  content: "";
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  vertical-align: middle;
+  background-color: white;
+  border: 1px solid white;
+}
+
+/* карточки */
+
+.content__card-link:hover {
+  text-decoration: underline 1px white;
+  text-underline-offset: 6px;
+}
+
+.content__card-link:active {
+  background-color: #545050;
+}
+
+.content__card-link:focus {
+  outline: none;
+}
+
+.content__card-link:focus-visible {
+  border: 1px solid #fff;
+}
+
+.content__card-link_current {
+  background-color: #545050;
+}
+
+.content__list .content__list-item:not(:last-child) {
+  margin-bottom: 27px;
+}
+
+/* кнопки */
+
+.button:hover {
+  text-decoration: underline 1px;
+  text-underline-offset: 3px;
+}
+
+.button:active {
+  text-decoration: none;
+  background-color: #545050;
+}
+
+.button:focus {
+  outline: none;
+}
+
+.button:focus-visible {
+  outline: 1px solid #fff;
+  outline-offset: 2px;
+}
